--- a/index.css
+++ b/index.css
@@ -10,6 +10,12 @@ nav {
     align-items: center;
 }
 
+.note-card-container {
+    width: auto;
+    height: auto;
+    
+}
+
 .nav-bar button {
     width: 50px;
     height: 50px;
@@ -22,16 +28,18 @@ section {
 }
 
 .note-card {
+    list-style-type: none;
     border: 1px solid lightgrey;
     border-radius: 5px;
     width: 225px;
-    height: auto;
+    height: 225px;
     margin: 10px;
+    padding: 10px;
 }
 
-.note-card h1 {
+/* .note-card h1 {
     padding: 0px 15px;
-}
+} */
 
 .note-card p {
     padding: 0px 15px;
@@ -39,4 +47,17 @@ section {
 
 .note-menu {
     padding: 15px 15px;
+}
+
+.note-card textarea {
+    width: calc(100% - 10px);
+    height: calc(100% - 55px);
+    border: none;
+    resize: none;
+    outline: none;
+    
+}
+
+textarea[disabled] {
+    background-color: white;
 }
