--- a/index.css
+++ b/index.css
@@ -1,6 +1,12 @@
 nav {
-    /* border: 1px solid lightgrey; */
     padding: 0px 15px;
+}
+
+ul {
+    width: inherit;
+    height: inherit;
+    padding: 0;
+    list-style-type: none;
 }
 
 .nav-bar {
@@ -10,11 +16,13 @@ nav {
     align-items: center;
 }
 
-.note-card-container {
-    width: auto;
-    height: auto;
-    
+html, body {
+   height: 100%;
+   width: 100%;
+   margin: 0px;
 }
+
+
 
 .nav-bar button {
     width: 50px;
@@ -23,41 +31,76 @@ nav {
 
 section {
     display: flex;
+    width: 100%;
+    height: 90%;
     flex-direction: row;
-    margin: 10px 0px;
+    display: flex;
+    align-items: center;
 }
 
+#note-card-container {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    grid-gap: 10px;
+    padding: 0 10px;
+}
 .note-card {
+    display: flex;
+    float: left;
     list-style-type: none;
     border: 1px solid lightgrey;
     border-radius: 5px;
-    width: 225px;
-    height: 225px;
-    margin: 10px;
+    min-height: calc(65vh/6);
     padding: 10px;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-/* .note-card h1 {
-    padding: 0px 15px;
-} */
 
 .note-card p {
-    padding: 0px 15px;
-}
-
-.note-menu {
-    padding: 15px 15px;
+    width: calc(100vw/7);
+    height: calc(100vh/7);
+    font-size: 12px;
+    font-family: sans-serif;
+    word-wrap: break-word;
+    position: relative;
+    z-index: 1;
+    margin-top: 15px;
 }
 
 .note-card textarea {
-    width: calc(100% - 10px);
-    height: calc(100% - 55px);
+    width: calc(100%/7);
+    height: calc(100%/15);
+    position: absolute;
     border: none;
     resize: none;
     outline: none;
+    z-index: 5;
+    font-size: 12px;
+    font-family: sans-serif;
+    margin-top: 15px;
+}
+
+#close-button {
+    position: relative;
+    bottom: 90%;
+    left: 48%;
+    right: 0px;
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 10px;
     
 }
 
-textarea[disabled] {
-    background-color: white;
+#save-button {
+    width: 45px;
+    height: 18px;
+    margin-left: 5px;
+    position: relative;
+    left: 85%;
+    top: 5%;
 }
