--- a/index.css
+++ b/index.css
@@ -69,6 +69,7 @@ section {
     position: relative;
     z-index: 1;
     margin-top: 15px;
+    pointer-events: none;
 }
 
 .note-card textarea {
@@ -93,7 +94,9 @@ section {
     outline: none;
     background: none;
     font-size: 10px;
-    
+    width: 8px;
+    text-align: center;
+    margin: auto; 
 }
 
 #save-button {
@@ -103,4 +106,12 @@ section {
     position: relative;
     left: 85%;
     top: 5%;
+}
+
+#selected {
+    border: 3px solid lightblue;
+}
+
+li:hover {
+    border: 3px solid yellow;
 }
